# senior-project-spring-2022-blueprint-automation-tool

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE.md  README.md  color_converter.py  game_automation.py  game_version.yaml  logo.py  minecraft_handler.py  place_parser.py  requirements-dev.txt  requirements.txt  setup.cfg  window.py
.github/: labels.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_question.yml  04_development_story.yml  BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/linters/: .flake8  .markdown-lint.yml  .pylintrc  .textlintrc  .yaml-lint.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  continuous_deployment.yml  continuous_integration.yml  (+6 more)
.linting/: .pylintrc
__examples__/: Center Mark.kml  Untitled Placemark.kml
__tests__/: test_window.py
automation_helpers/: boilerplate.py  keyboard.py  keys.yml  window.py
docs/: CHANGELOG.md
sample_files/: #1.kml  #10.kml  #101.1 Atchley Clock Tower.kml  #101.kml  #103.kml  #107 108 109.kml  #107.1.kml  #107.2.kml  #110.kml  #111.1.kml  #111.kml  #112.kml  #115 Long Theatre.kml  #116.kml  #118.kml  #12.kml  #120.kml  #122.kml  #124.kml  #14 Fayes Spanos Concert Hall.kml  #15.kml  #16.kml  #18 William Knox Holt Memorial Library.kml  #2.kml  #23.kml  #24.kml  #25.kml  #27.kml  #28.kml  #29.kml  #3.kml  #30.kml  #31.1.kml  #31.kml  #32.1.kml  #32.kml  #33.kml  #34.kml  #35.kml  #4.kml  (+28 more)
source/: Center Mark.kml  Example Line.kml  color_converter.py  game_automation.py  logo.py  new_builder.py  place_parser.py  rotunda.py  test.py
tests/: Rotunda.kml  test_place_parser.py
tools/: install_package_locally.ps1  run_super_linter.ps1  setup_development_environment.ps1
(+210 files in other folders)
