[metadata]
name = blueprint_automation_tool
version = 0.6.0
author = Kevin Green
author_email = k_green5@u.pacific.edu
description = A Google Earth Pro to Minecraft Blueprint Atuomation Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/comp195/senior-project-spring-2022-blueprint-automation-tool
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.9
install_requires =
    pywin32
include_package_Data = True

[options.packages.find]
where = source