# File:         setup.cfg
# Description:  Sets up data for the python pacakge

# Useful Links:
# Types of Classifiers: https://pypi.org/pypi?%3Aaction=list_classifiers

[metadata]
name = blueprint_automation_tool
version = 1.0.0
description = A Google Earth Pro to Minecraft Blueprint Automation Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Kevin Green
author_email = k_green5@u.pacific.edu
url = https://github.com/comp195/senior-project-spring-2022-blueprint-automation-tool
keywords =
    one
    two
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    =source
packages = find:
install_requires =
    pyyaml
    kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip

[options.package_data]
* = *.txt, *.md, *.kv
hello = *.msg

[options.packages.find]
where = source
exclude =
    examples*
    tools*
    docs*
    blueprint_automation_tool.tests*